SIS: body: overflow-y:hidden - FF fix

--- a/src/Public/css/sis.css
+++ b/src/Public/css/sis.css
@@ -2,6 +2,7 @@ body {
   width: 98%;
   min-width: 1200px;
   height: calc(100% - 22px);
+  overflow-y: hidden;
 }
 
 #notice {
